syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "net.atos.daf.ct2.translationservice";

package net.atos.daf.ct2.translationservice;


service TranslationService {
rpc GetTranslations(TranslationsRequest) returns (TranslationsResponce);
rpc GetCommonTranslations(CodeRequest) returns (CodeResponce);
rpc GetLangagugeTranslationByKey (KeyRequest) returns (KeyResponce);
rpc GetKeyTranslationByLanguageCode (KeyCodeRequest) returns (KeyCodeResponce);
rpc GetTranslationsForDropDowns(dropdownnameRequest) returns (dropdownnameResponce);
rpc GetTranslationsFormultipleDropDowns(dropdownarrayRequest) returns (dropdownarrayResponce);
rpc GetTranslationsPreferencDropDowns(PreferenceRequest) returns (PreferenceResponse);
rpc GetAllLanguagecodes(Request) returns (TranslationListResponce);
rpc InsertTranslationFileDetails (TranslationUploadRequest) returns (TranslationUploadResponse);
rpc GetFileUploadDetails (FileUploadDetailsRequest) returns (FileUploadDetailsResponse);
}

enum TranslationType{
    Menu = 0;
    Feature = 1;
  }
  
    // response code  
    enum Responcecode{
        Success = 0;
        Failed = 1;
      }
  
  enum Contenttype{
    Text = 0;
    Dropdown = 1;
    Image =2;
  }
  message TranslationsRequest
    {
     int32 Id =1;
         string Code =2;
         string Type =3;
         string Name =4;
         string  Value =5;
         string Filter =6;
         int32 MenuId =7;

    }
  
    message TranslationsResponce
    {
      Responcecode code=1;
      string message = 2;
      repeated Translation TranslationsList = 3;
  
    }
    message CodeRequest {
    string Languagecode = 1;
    }

     message CodeResponce {
     Responcecode code=1;
     string message = 2;
     repeated Translation CodeTranslationsList = 3;
    }

    message KeyRequest {
    string Key = 1;
    }
    message KeyResponce {
     Responcecode code=1;
      string message = 2;
     repeated Translation KeyTranslationsList = 3;
    }

    message KeyCodeRequest {
    string Languagecode = 1;
    string Key = 2;
    }
    message KeyCodeResponce {
     Responcecode code=1;
      string message = 2;
     repeated Translation KeyCodeTranslationsList = 3;
    }

    message dropdownnameRequest {
    string Dropdownname = 1;
    string Languagecode = 2;
    }


      message dropdownnameResponce {
     Responcecode code=1;
      string message = 2;
     repeated Translation dropdownnameTranslationsList = 3;
    }

     message dropdownnameResponces {
     Responcecode code=1;
      string message = 2;
     repeated dropdownnameRequest dropdownnameTranslations = 3;
    }

    message Request {}

  

     message dropdownarrayRequest {
    repeated DropdownName Dropdownname = 1;
    string Languagecode = 2;
    }
      message dropdownarrayResponce {
     Responcecode code=1;
      string message = 2;
     repeated Translation dropdownnamearrayList = 3;
    }

     message PreferenceRequest {
    string Languagecode = 1;
    }
    
     message PreferenceResponse {
    Responcecode Code=1;
    string Message = 2; 
    repeated Translation language =3;
    repeated Translation unit =4;
    repeated Translation timezone =5;
    repeated Translation currency =6;
    repeated Translation landingpagedisplay =7;
    repeated Translation dateformat =8;
    repeated Translation timeformat =9;
    repeated Translation vehicledisplay =10;
    PreferenceRequest  TranslationsPreferencDropDowns =11;
    }

   message Translation{
         int32 Id =1;
        string Code =2;
        string Type=3;
         string Name =4;
        string  Value =5;
         string Filter =6;
         int32 MenuId =7;
   } 

  message PreferenceResponceList
{
    int32 Id=1;
    string Name=2;
}

message Language{
        string  Code =1;
        string  Description =2;
          int32 Id =3;
            string Key =4;
         string Name =5;
         
   } 
     message TranslationListResponce {
    Responcecode code=1;
    string message = 2;
    repeated Language languagelist = 3;
    }

    message DropdownName {  
  string Dropdownname = 1;  
}

message TranslationUploadRequest
{

      string file_name =1;
      string description =2;
      int32 file_size =3;
      int32 failure_count =4;
     // int32 created_by =5;
      repeated TranslationData file =5;
      int32 added_count =6;
      string updated_count =7;
}

message TranslationData
{
      string code =1;
      string type =2;
      string name =3;
      string value =4;
}

message TranslationUploadResponse
{
    Responcecode code=1;
    string message = 2;
    TranslationRecordResponce translationupload=3;
}

message FileUploadDetailsRequest
{
   int32 FileID =1;
}

message FileUploadDetailsResponse
{
    Responcecode code=1;
    string message = 2;
   repeated TranslationUpload translationupload=3;
}

message TranslationUpload
{

      int32 id =1;
      string file_name =2;
      string description =3;
      int32 file_size =4;
      int32 failure_count =5;
      int64 createdAt =10;
      repeated TranslationData file =6;
      int32 added_count =7;
      string updated_count =8;
     // repeated Translation translations =9;

}

  message TranslationRecordResponce
{
   int32 Failed = 1;
    int32    Updated = 2;
     int32   Added = 3;
}
